--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "vite": "^5.4.10"
+  },
+  "volta": {
+    "node": "18.17.1"
   }
 }
